--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -7,15 +7,16 @@
 MACHINEOVERRIDES =. "mx7:mx7d:"
 
 require conf/machine/include/imx-base.inc
-require conf/machine/include/tune-cortexa7.inc
+require conf/machine/include/arm/armv7a/tune-cortexa7.inc
 
 SERIAL_CONSOLES = "115200;ttymxc0"
 
 MACHINE_FEATURES += " pci wifi bluetooth nxp8987 mrvl8997"
 
 
-PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel:imx-nxp-bsp = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_RPROVIDER_kernel-module-imx-gpu-viv = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
@@ -27,8 +28,7 @@ KERNEL_DEVICETREE = "imx7dea-ucom-kit_v2.dtb \
 "
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
-PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader:imx-nxp-bsp = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
@@ -53,7 +53,7 @@ IMAGE_BOOT_FILES = " \
 "
 
 # wic support
-IMAGE_BOOT_FILES_append = " \
+IMAGE_BOOT_FILES:append = " \
         boot.scr \
 "
 WKS_FILE_DEPENDS += " \
