--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -5,7 +5,7 @@
 #@MAINTAINER: EA <imx@EmbeddedArtists.com>
 
 require conf/machine/include/imx-base.inc
-require conf/machine/include/tune-cortexa9.inc
+include conf/machine/include/arm/armv7a/tune-cortexa9.inc
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
@@ -13,8 +13,9 @@ MACHINE_FEATURES += " pci wifi bluetooth nxp8987 mrvl8997"
 
 MACHINEOVERRIDES =. "mx6:mx6dl:"
 
-PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel:imx-nxp-bsp = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_RPROVIDER_kernel-module-imx-gpu-viv = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
@@ -26,8 +27,7 @@ KERNEL_DEVICETREE = "imx6dlea-com-kit_v2.dtb \
 "
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
-PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader:imx-nxp-bsp = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
@@ -52,7 +52,7 @@ IMAGE_BOOT_FILES = " \
 "
 
 # wic support
-IMAGE_BOOT_FILES_append = " \
+IMAGE_BOOT_FILES:append = " \
         boot.scr \
 "
 WKS_FILE_DEPENDS += " \
