--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -15,6 +15,7 @@ MACHINEOVERRIDES =. "mx6:mx6sx:"
 
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_RPROVIDER_kernel-module-imx-gpu-viv = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
