mfgtool support. Needed for fsl-image-mfgtool-initramfs image which must be built to get a new RAM file system

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,7 +12,7 @@ LAYERSERIES_COMPAT_ea = "langdale"
 
 #LAYERDEPENDS_ea = "fsl-arm"
 
-IMX_DEFAULT_BOOTLOADER_imx = "u-boot-ea"
+IMX_DEFAULT_BOOTLOADER:imx-nxp-bsp = "u-boot-ea"
 
 # Avoid multiple runtime providers for u-boot-default-env
 PREFERRED_RPROVIDER_u-boot-default-env ??= "${IMX_DEFAULT_BOOTLOADER}"
