--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -43,6 +43,7 @@ IMAGE_BOOTFILES += "imx8mm_m4_TCM_hello_world.bin \
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx8mmea-ucom_config,sdcard"
+UBOOT_CONFIG[mfgtool] = "mx8mmea-ucom_config"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 ATF_PLATFORM = "imx8mm"
