--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -41,6 +41,7 @@ IMAGE_BOOTFILES += "imx8mn_m7_TCM_hello_world.bin \
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx8mnea-ucom_config,sdcard"
+UBOOT_CONFIG[mfgtool] = "mx8mnea-ucom_config"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 ATF_PLATFORM = "imx8mn"
