--- a/conf/machine/imx93ea-ucom.conf
+++ b/conf/machine/imx93ea-ucom.conf
@@ -38,6 +38,7 @@ SPL_BINARY = "spl/u-boot-spl.bin"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd]   = "${UBOOT_CONFIG_BASENAME}_defconfig,sdcard"
+UBOOT_CONFIG[mfgtool] = "${UBOOT_CONFIG_BASENAME}_defconfig"
 
 # Set ATF platform name
 ATF_PLATFORM = "imx93"
