Updated to support 2EA M.2 module for imx8mm, imx8mn and imx93

--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -22,11 +22,15 @@ MACHINE_FEATURES += " pci nxp8987 mrvl8997"
 
 KERNEL_DEVICETREE = "freescale/imx8mm-ea-ucom-kit_v2.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-1mw.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v2-2ea.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v2-pcie-2ea.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-m4.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-pcie.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-ov5640.dtb \
                      freescale/imx8mm-ea-ucom-kit_v3.dtb \
                      freescale/imx8mm-ea-ucom-kit_v3-1mw.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v3-2ea.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v3-pcie-2ea.dtb \
                      freescale/imx8mm-ea-ucom-kit_v3-m4.dtb \
                      freescale/imx8mm-ea-ucom-kit_v3-pcie.dtb \
                      freescale/imx8mm-ea-ucom-kit_v3-ov5640.dtb \
