--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -22,10 +22,12 @@ MACHINE_FEATURES += " pci nxp8987 mrvl8997"
 
 KERNEL_DEVICETREE = "freescale/imx8mn-ea-ucom-kit_v2.dtb \
                      freescale/imx8mn-ea-ucom-kit_v2-1mw.dtb \
+                     freescale/imx8mn-ea-ucom-kit_v2-2ea.dtb \
                      freescale/imx8mn-ea-ucom-kit_v2-m4.dtb \
                      freescale/imx8mn-ea-ucom-kit_v2-usb-host.dtb \
                      freescale/imx8mn-ea-ucom-kit_v2-ov5640.dtb \
                      freescale/imx8mn-ea-ucom-kit_v3.dtb \
+                     freescale/imx8mn-ea-ucom-kit_v3-2ea.dtb \
                      freescale/imx8mn-ea-ucom-kit_v3-m4.dtb \
                      freescale/imx8mn-ea-ucom-kit_v3-ov5640.dtb \
 "
