--- a/conf/machine/imx93ea-ucom.conf
+++ b/conf/machine/imx93ea-ucom.conf
@@ -24,6 +24,7 @@ MACHINE_FEATURES += " pci wifi bluetooth"
 
 KERNEL_DEVICETREE = " \
 	freescale/${KERNEL_DEVICETREE_BASENAME}.dtb \
+	freescale/${KERNEL_DEVICETREE_BASENAME}-2ea.dtb \
 "
 
 UBOOT_CONFIG_BASENAME = "mx93ea-ucom"
