Change Yocto compatibility to mickledore

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,7 +8,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "ea"
 BBFILE_PATTERN_ea = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ea = "9"
-LAYERSERIES_COMPAT_ea = "langdale"
+LAYERSERIES_COMPAT_ea = "mickledore"
 
 #LAYERDEPENDS_ea = "fsl-arm"
 
