8MM+8MN: UBOOT_PROVIDES_BOOT_CONTAINER handled differently Changes made in https://github.com/Freescale/meta-freescale/commit/4beaafe643f414da6aff91dd2659bc9c1eefe87f

--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -9,6 +9,9 @@ MACHINEOVERRIDES =. "mx8:mx8m:mx8mn:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8a/tune-cortexa53.inc
 
+UBOOT_PROVIDES_BOOT_CONTAINER = "0"
+UBOOT_PROVIDES_BOOT_CONTAINER:mx8m-generic-bsp = "0"
+
 PREFERRED_PROVIDER_virtual/kernel:imx-nxp-bsp = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 PREFERRED_RPROVIDER_kernel-module-imx-gpu-viv = "linux-ea"
