--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -6,8 +6,12 @@
 
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
+
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8a/tune-cortexa53.inc
+
+UBOOT_PROVIDES_BOOT_CONTAINER = "0"
+UBOOT_PROVIDES_BOOT_CONTAINER:mx8m-generic-bsp = "0"
 
 PREFERRED_PROVIDER_virtual/kernel:imx-nxp-bsp = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
