--- a/conf/machine/imx93ea-ucom.conf
+++ b/conf/machine/imx93ea-ucom.conf
@@ -63,11 +63,16 @@ DDR_FIRMWARE_NAME = " \
 
 SECO_FIRMWARE_NAME:mx9-nxp-bsp = "mx93a0-ahab-container.img"
 
-IMAGE_BOOT_FILES:append:use-nxp-bsp = " \
-        imx93_m33_TCM_power_mode_switch.bin \
-        imx93_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
-        imx93_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+IMAGE_BOOT_FILES:append = " \
+    imx93-14x14-evk_m33_TCM_power_mode_switch.bin \
+    imx93-14x14-evk_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93-14x14-evk_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+    imx93-9x9-qsb_m33_TCM_power_mode_switch.bin \
+    imx93-9x9-qsb_m33_TCM_low_power_wakeword.bin \
+    imx93-9x9-qsb_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93-9x9-qsb_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
 "
+
 WKS_FILE_DEPENDS:append = " imx-m33-demos"
 
 
