iMX93: Change silicon revision to A0 Once A1 silicon is available this must be commit must be removed

--- a/conf/machine/imx93ea-ucom.conf
+++ b/conf/machine/imx93ea-ucom.conf
@@ -62,6 +62,7 @@ DDR_FIRMWARE_NAME = " \
 "
 
 SECO_FIRMWARE_NAME:mx9-nxp-bsp = "mx93a0-ahab-container.img"
+SECO_FIRMWARE_NAME:mx93-generic-bsp = "mx93a0-ahab-container.img"
 
 IMAGE_BOOT_FILES:append = " \
     imx93-14x14-evk_m33_TCM_power_mode_switch.bin \
