--- a/conf/machine/imx93ea-ucom.conf
+++ b/conf/machine/imx93ea-ucom.conf
@@ -74,6 +74,12 @@ IMAGE_BOOT_FILES:append = " \
     imx93-9x9-qsb_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
 "
 
+# wic support
+IMAGE_BOOT_FILES:append = " \
+	boot.scr \
+"
+
 WKS_FILE_DEPENDS:append = " imx-m33-demos"
+WKS_FILE_DEPENDS:append = " u-boot-script-ea"
 
 
